# accordion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-mirror.yml
data/output/: adata_G_annotated.h5ad
data/sumstats/: sumstats_rdw.txt
docs/: CLI.md
docs/api/: search.js  simba_plus.html
docs/api/simba_plus/: _settings.html  _utils.html  constants.html  decoders.html  encoders.html  evaluate.html  evaluation_utils.html  get_adata.html  heritability.html  linking.html  load_data.html  loader.html  loss.html  losses.html  model_prox.html  negative_sampling.html  plotting.html  post_training.html  prob_decoders.html  readwrite.html  simba_plus.html  train.html  util_modules.html  utils.html
docs/api/simba_plus/datasets/: _datasets.html
docs/api/simba_plus/heritability/: create_report.html  get_residual.html  get_taus.html  ldsc.html  utils.html
docs/api/simba_plus/linking/: _utils.html  add_features.html  build_evalset.html  candidate_links.html  model_training.html  plot_utils.html  supervised_predict.html  supervised_train.html  unsupervised.html
docs/api/simba_plus/loss/: gene_alignment.html  hsic.html  ot_alignment.html
docs/api/simba_plus/plotting/: factors.html  heritability.html  utils.html
docs/api/simba_plus/post_training/: enrichment.html  factors.html
scripts/: update_cli_docs.py
src/simba_plus/: constants.py  decoders.py  encoders.py  evaluate.py  get_adata.py  load_data.py  loader.py  losses.py  model_prox.py  negative_sampling.py  predict.py  prob_decoders.py  simba_plus.py  train.py  train_xgboost.py  util_modules.py  utils.py
src/simba_plus/datasets/: _datasets.py
src/simba_plus/discovery/: add_features.py  model_training.py
src/simba_plus/heritability/: create_report.py  get_residual.py  get_taus.py  ldsc.py  ldsc_l2.sh  utils.py
src/simba_plus/loss/: gene_alignment.py  ot_alignment.py
src/simba_plus/plotting/: heritability.py
src/simba_plus/post_training/: enrichment.py  factors.py  linking.py
src/simba_plus/predict_utils/: build_candidates.py  overlap_regions.py  overlap_snps.py  unsupervised_predict.py
tests/: conftest.py  test_auxparams_multisample_batch.py  test_check_heterodata_codes.py  test_cli.py  test_gene_alignment.py  test_load.py  test_load_data_multi_rna.py  test_negative_sampling.py  test_ot_alignment.py  test_train.py
